[gd_scene load_steps=5 format=3 uid="uid://bpq3i81meetrl"]

[ext_resource type="Script" uid="uid://bg1685u0uy87w" path="res://scenes/GUI/bingo_main/actions/gui_attune_confirmation_overlay.gd" id="1_clc7f"]
[ext_resource type="PackedScene" uid="uid://beuy7po6dtwkn" path="res://scenes/GUI/utils/gui_overlay_background.tscn" id="2_nvgua"]
[ext_resource type="PackedScene" uid="uid://d1k86f5aexxl" path="res://scenes/GUI/controls/buttons/gui_card_reward_button.tscn" id="3_0mpgb"]
[ext_resource type="PackedScene" uid="uid://bgeepmq2eiey4" path="res://scenes/GUI/controls/buttons/gui_rich_text_button.tscn" id="5_aoul8"]

[node name="GUIAttuneConfirmationOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_clc7f")

[node name="GUIOverlayBackground" parent="." instance=ExtResource("2_nvgua")]
layout_mode = 1
color = Color(0, 0, 0, 0.941176)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 0.784314, 0.145098, 1)
text = "Confirm Remove?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="From" parent="VBoxContainer/HBoxContainer" instance=ExtResource("3_0mpgb")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="BackButton" parent="VBoxContainer/ButtonContainer" instance=ExtResource("5_aoul8")]
unique_name_in_owner = true
layout_mode = 2
localization_text_key = "BACK"

[node name="ConfirmButton" parent="VBoxContainer/ButtonContainer" instance=ExtResource("5_aoul8")]
unique_name_in_owner = true
layout_mode = 2
localization_text_key = "CONFIRM"
